load("@contrib_rules_jvm//java:defs.bzl", "JUNIT5_DEPS", "java_test_suite")
load("@rules_java//java:defs.bzl", "java_binary", "java_library")
load("//lib/http:defs.bzl", "stub_server_image")
load("//lib/localstack:defs.bzl", "localstack_image")

HANDLERS = glob(["src/main/java/**/*Handler.java"])

INTEGRATION_TESTS = glob(["src/test/java/**/*IntegrationTest.java"])

E2E_TESTS = glob(["src/test/java/**/*E2ETest.java"])

UNIT_TESTS = glob(
    ["src/test/java/**/*Test.java"],
    exclude = INTEGRATION_TESTS + E2E_TESTS,
)

java_library(
    name = "lib",
    srcs = glob(
        ["src/main/java/**/*.java"],
        exclude = HANDLERS,
    ),
    visibility = [
        "//visibility:public",
    ],
    deps = [
        "//lib/dynamodb:lib",
        "//lib/json:lib",
        "//lib/notifications:lib",
        "//lib/time:lib",
        "//third_party/dagger",
        "@maven//:com_fasterxml_jackson_core_jackson_annotations",
        "@maven//:com_fasterxml_jackson_core_jackson_databind",
        "@maven//:com_google_guava_guava",
        "@maven//:net_sf_biweekly_biweekly",
        "@maven//:org_jsoup_jsoup",
        "@maven//:software_amazon_awssdk_dynamodb",
        "@maven//:software_amazon_awssdk_dynamodb_enhanced",
    ],
)

java_binary(
    name = "get-calendar-subscription-handler",
    srcs = ["src/main/java/com/jordansimsmith/footballcalendar/GetCalendarSubscriptionHandler.java"],
    create_executable = False,
    resources = [
        "src/main/resources/logback.xml",
    ],
    deps = [
        ":lib",
        "//third_party/dagger",
        "@maven//:ch_qos_logback_logback_classic",
        "@maven//:ch_qos_logback_logback_core",
        "@maven//:com_amazonaws_aws_lambda_java_core",
        "@maven//:com_amazonaws_aws_lambda_java_events",
        "@maven//:com_google_guava_guava",
        "@maven//:net_sf_biweekly_biweekly",
        "@maven//:org_slf4j_slf4j_api",
        "@maven//:software_amazon_awssdk_dynamodb_enhanced",
    ],
)

java_binary(
    name = "update-fixtures-handler",
    srcs = ["src/main/java/com/jordansimsmith/footballcalendar/UpdateFixturesHandler.java"],
    create_executable = False,
    resources = [
        "src/main/resources/logback.xml",
    ],
    deps = [
        ":lib",
        "//lib/notifications:lib",
        "//lib/time:lib",
        "//third_party/dagger",
        "@maven//:ch_qos_logback_logback_classic",
        "@maven//:ch_qos_logback_logback_core",
        "@maven//:com_amazonaws_aws_lambda_java_core",
        "@maven//:com_amazonaws_aws_lambda_java_events",
        "@maven//:com_google_guava_guava",
        "@maven//:org_slf4j_slf4j_api",
        "@maven//:software_amazon_awssdk_dynamodb_enhanced",
    ],
)

java_binary(
    name = "nrf-stub-server",
    testonly = True,
    srcs = ["src/test/java/com/jordansimsmith/footballcalendar/NrfStubServer.java"],
    create_executable = False,
)

java_binary(
    name = "football-fix-stub-server",
    testonly = True,
    srcs = ["src/test/java/com/jordansimsmith/footballcalendar/FootballFixStubServer.java"],
    create_executable = False,
)

java_binary(
    name = "subfootball-stub-server",
    testonly = True,
    srcs = ["src/test/java/com/jordansimsmith/footballcalendar/SubfootballStubServer.java"],
    create_executable = False,
)

java_library(
    name = "test-lib",
    testonly = True,
    srcs = glob(
        ["src/test/java/**/*.java"],
        exclude = UNIT_TESTS + INTEGRATION_TESTS + E2E_TESTS,
    ),
    data = [
        ":football-fix-stub-load",
        ":local-load",
        ":nrf-stub-load",
        ":subfootball-stub-load",
    ],
    resources = [
        "src/test/resources/logback-test.xml",
        "src/test/resources/test.properties",
    ],
    deps = [
        ":lib",
        "//lib/dynamodb:test-lib",
        "//lib/http:test-lib",
        "//lib/json:lib",
        "//lib/localstack:lib",
        "//lib/notifications:test-lib",
        "//lib/testcontainers:test-lib",
        "//lib/time:test-lib",
        "//third_party/dagger",
        "@maven//:ch_qos_logback_logback_classic",
        "@maven//:ch_qos_logback_logback_core",
        "@maven//:com_amazonaws_aws_lambda_java_core",
        "@maven//:com_amazonaws_aws_lambda_java_events",
        "@maven//:com_google_guava_guava",
        "@maven//:javax_inject_javax_inject",
        "@maven//:org_slf4j_slf4j_api",
        "@maven//:org_testcontainers_junit_jupiter",
        "@maven//:org_testcontainers_testcontainers",
        "@maven//:software_amazon_awssdk_dynamodb",
        "@maven//:software_amazon_awssdk_dynamodb_enhanced",
    ],
)

java_test_suite(
    name = "unit-tests",
    size = "small",
    srcs = UNIT_TESTS,
    runner = "junit5",
    runtime_deps = JUNIT5_DEPS,
    deps = [
        ":lib",
        ":test-lib",
        "@maven//:com_fasterxml_jackson_core_jackson_databind",
        "@maven//:net_sf_biweekly_biweekly",
        "@maven//:org_assertj_assertj_core",
        "@maven//:org_jsoup_jsoup",
        "@maven//:org_junit_jupiter_junit_jupiter_api",
        "@maven//:org_mockito_mockito_core",
    ],
)

java_test_suite(
    name = "integration-tests",
    size = "medium",
    srcs = INTEGRATION_TESTS,
    env = {
        "AWS_ACCESS_KEY_ID": "fake",
        "AWS_SECRET_ACCESS_KEY": "fake",
        "AWS_REGION": "ap-southeast-2",
    },
    resources = [
        "src/test/resources/logback-test.xml",
    ],
    runner = "junit5",
    test_suffixes = ["IntegrationTest.java"],
    runtime_deps = JUNIT5_DEPS,
    deps = [
        ":get-calendar-subscription-handler",
        ":lib",
        ":test-lib",
        ":update-fixtures-handler",
        "//lib/dynamodb:test-lib",
        "//lib/notifications:test-lib",
        "//lib/testcontainers:test-lib",
        "//lib/time:test-lib",
        "//third_party/dagger",
        "@maven//:com_amazonaws_aws_lambda_java_events",
        "@maven//:com_google_guava_guava",
        "@maven//:javax_inject_javax_inject",
        "@maven//:net_sf_biweekly_biweekly",
        "@maven//:org_assertj_assertj_core",
        "@maven//:org_junit_jupiter_junit_jupiter_api",
        "@maven//:org_testcontainers_junit_jupiter",
        "@maven//:software_amazon_awssdk_dynamodb",
        "@maven//:software_amazon_awssdk_dynamodb_enhanced",
    ],
)

localstack_image(
    name = "local",
    handler_jars = [
        ":get-calendar-subscription-handler_deploy.jar",
        ":update-fixtures-handler_deploy.jar",
    ],
    init_resources = "src/test/resources/init_resources.py",
    repo_tag = "bazel/football-calendar-local:latest",
)

stub_server_image(
    name = "nrf-stub",
    deploy_jar = ":nrf-stub-server_deploy.jar",
    repo_tag = "bazel/football-calendar-nrf-stub:latest",
)

stub_server_image(
    name = "football-fix-stub",
    deploy_jar = ":football-fix-stub-server_deploy.jar",
    repo_tag = "bazel/football-calendar-football-fix-stub:latest",
)

stub_server_image(
    name = "subfootball-stub",
    deploy_jar = ":subfootball-stub-server_deploy.jar",
    repo_tag = "bazel/football-calendar-subfootball-stub:latest",
)

java_test_suite(
    name = "e2e-tests",
    size = "large",
    srcs = E2E_TESTS,
    env = {
        "AWS_ACCESS_KEY_ID": "fake",
        "AWS_SECRET_ACCESS_KEY": "fake",
        "AWS_REGION": "ap-southeast-2",
    },
    resources = [
        "src/test/resources/logback-test.xml",
    ],
    runner = "junit5",
    test_suffixes = ["E2ETest.java"],
    runtime_deps = JUNIT5_DEPS,
    deps = [
        ":lib",
        ":test-lib",
        "//lib/dynamodb:test-lib",
        "//lib/queue:test-lib",
        "@maven//:ch_qos_logback_logback_classic",
        "@maven//:ch_qos_logback_logback_core",
        "@maven//:com_fasterxml_jackson_core_jackson_core",
        "@maven//:com_fasterxml_jackson_core_jackson_databind",
        "@maven//:net_sf_biweekly_biweekly",
        "@maven//:org_assertj_assertj_core",
        "@maven//:org_junit_jupiter_junit_jupiter_api",
        "@maven//:org_slf4j_slf4j_api",
        "@maven//:org_testcontainers_junit_jupiter",
        "@maven//:org_testcontainers_testcontainers",
        "@maven//:software_amazon_awssdk_dynamodb",
        "@maven//:software_amazon_awssdk_dynamodb_enhanced",
        "@maven//:software_amazon_awssdk_lambda",
        "@maven//:software_amazon_awssdk_sqs",
    ],
)
